// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionList /> should render with all available passed in options 1`] = `
<div
  className="css-1byi7qz"
>
  <div
    className="css-7zhfhb"
  >
    Arguments
  </div>
  <div
    className="css-1uxy4lo"
  >
    <div
      className="css-m1kwjs"
    >
      <div
        className="css-7zhfhb"
      >
        align-content
      </div>
      <div
        className="css-ynica6"
        required={true}
      >
        required
      </div>
      <div
        className="css-7zhfhb"
      >
        string
      </div>
    </div>
    <p
      className="css-7zhfhb"
    >
      <span>
        The reason given for the 
        <a
          href="#"
        >
          cancellation
        </a>
         by the member support employee.
         
      </span>
      <span>
        The default value is 
        <code
          className="css-7zhfhb"
        >
          stretch
        </code>
        .
      </span>
      <span>
         Possible values are 
      </span>
      <span
        className="css-idza5k"
      >
        <span>
          <code
            className="css-7zhfhb"
          >
            stretch
          </code>
        </span>
        <span>
          <code
            className="css-7zhfhb"
          >
            start
          </code>
        </span>
        <span>
          <code
            className="css-7zhfhb"
          >
            end
          </code>
        </span>
        .
      </span>
    </p>
  </div>
</div>
`;

exports[`<OptionList /> should render with minimum requirements 1`] = `
<div
  className="css-1byi7qz"
>
  <div
    className="css-7zhfhb"
  >
    Options
  </div>
  <div
    className="css-1uxy4lo"
  >
    <div
      className="css-m1kwjs"
    >
      <div
        className="css-7zhfhb"
      >
        align-content
      </div>
      <div
        className="css-shasf9"
      >
        optional
      </div>
      <div
        className="css-7zhfhb"
      >
        string
      </div>
    </div>
    <p
      className="css-7zhfhb"
    >
      <span>
         
      </span>
    </p>
  </div>
</div>
`;
